--- a/projects/playground/src/styles.scss
+++ b/projects/playground/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Arial;
+  margin: auto;
+  padding: 0 0.25em;
+
+  @media (min-width: 576px) {
+    max-width: 540px;
+  }
+
+  @media (min-width: 768px) {
+    max-width: 720px;
+  }
+}
