--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -1,80 +1,97 @@
 <svg
+  attr.height="{{size}}"
+  attr.width="{{size}}"
   version="1.1"
   xmlns="http://www.w3.org/2000/svg"
-  height="1em"
   viewBox="0 0 100 100"
 >
   <linearGradient
-    id="gradient"
-    gradientTransform="rotate(90)"
+    id="fill-gradient"
+    attr.gradientTransform="rotate({{fillRotate}})"
   >
     <stop
-      offset="0%"
-      attr.stop-color="#{{gradientStart}}"
-    />
-    <stop
-      offset="100%"
-      attr.stop-color="#{{gradientEnd}}"
+      *ngFor="let color of fill; let idx = index"
+      attr.offset="{{fillGradientOffset(idx)}}%"
+      attr.stop-color="#{{color}}"
     />
   </linearGradient>
   <circle
     *ngIf="type === 'circle'"
-    fill="url(#gradient)"
+    fill="url(#fill-gradient)"
     attr.stroke="#{{stroke}}"
-    stroke-width="5"
+    attr.stroke-width="{{strokeWidth}}"
     cx="50"
     cy="50"
     r="40"
   />
   <circle
     *ngIf="type === 'dot'"
-    fill="url(#gradient)"
+    fill="url(#fill-gradient)"
     attr.stroke="#{{stroke}}"
-    stroke-width="5"
+    attr.stroke-width="{{strokeWidth}}"
     cx="50"
     cy="50"
     r="20"
   />
+  <path
+    *ngIf="type === 'ring'"
+    fill="url(#fill-gradient)"
+    attr.stroke="#{{stroke}}"
+    attr.stroke-width="{{strokeWidth}}"
+    attr.d="{{ringPath()}}"
+  />
   <rect
     *ngIf="type === 'square'"
-    fill="url(#gradient)"
+    fill="url(#fill-gradient)"
+    attr.fill-opacity="{{fillOpacity}}"
     attr.stroke="#{{stroke}}"
-    stroke-width="5"
+    attr.stroke-width="{{strokeWidth}}"
+    x="10"
+    y="10"
+    width="80"
+    height="80"
+  />
+  <rect
+    *ngIf="type === 'squircle'"
+    fill="url(#fill-gradient)"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="#{{stroke}}"
+    attr.stroke-width="{{strokeWidth}}"
     x="10"
     y="10"
     width="80"
     height="80"
     rx="15"
   />
-  <polygon
-    *ngIf="type === 'check'"
-    fill="url(#gradient)"
-    attr.stroke="#{{stroke}}"
-    stroke-width="5"
-    points="40,80 90,30 80,20 40,60 20,40 10,50"
-  />
-  <polygon
-    *ngIf="type === 'times'"
-    fill="url(#gradient)"
-    attr.stroke="#{{stroke}}"
-    stroke-width="5"
-    points="20,90 10,80 40,50 10,20 20,10 50,40 80,10 90,20 60,50 90,80 80,90 50,60"
-  />
-  <polygon
-    *ngIf="type === 'plus'"
-    fill="url(#gradient)"
-    attr.stroke="#{{stroke}}"
-    stroke-width="5"
-    points="40,90 60,90 60,60 90,60 90,40 60,40 60,10 40,10 40,40 10,40 10,60 40,60"
-  />
   <rect
     *ngIf="type === 'minus'"
-    fill="url(#gradient)"
+    fill="url(#fill-gradient)"
     attr.stroke="#{{stroke}}"
-    stroke-width="5"
+    attr.stroke-width="{{strokeWidth}}"
     x="10"
     y="40"
     width="80"
     height="20"
+  />
+  <polygon
+    *ngIf="type === 'check'"
+    fill="url(#fill-gradient)"
+    attr.stroke="#{{stroke}}"
+    attr.stroke-width="{{strokeWidth}}"
+    points="40,80 90,30 80,20 40,60 20,40 10,50"
+  />
+  <polygon
+    *ngIf="type === 'times'"
+    fill="url(#fill-gradient)"
+    attr.stroke="#{{stroke}}"
+    attr.stroke-width="{{strokeWidth}}"
+    points="20,90 10,80 40,50 10,20 20,10 50,40 80,10 90,20 60,50 90,80 80,90 50,60"
+  />
+  <polygon
+    *ngIf="type === 'plus'"
+    fill="url(#fill-gradient)"
+    attr.stroke="#{{stroke}}"
+    attr.stroke-width="{{strokeWidth}}"
+    points="40,90 60,90 60,60 90,60 90,40 60,40 60,10 40,10 40,40 10,40 10,60 40,60"
   />
 </svg>
