inputs, lock in lib ver

--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -1,11 +1,78 @@
 <h1>Icon Playground</h1>
+<small>v0.0.1</small>
 <h2>Features</h2>
 <ol>
   <li>scalable vector graphics 😎</li>
+  <li>invalid Input value bindings have no effect</li>
 </ol>
 <h2>Inputs</h2>
 <ol>
-  <li>coming soon!</li>
+  <li>
+    <code>fill</code>
+    <ul>
+      <li>
+        type: <code>hexString | hexString[]</code>
+      </li>
+      <li>
+        default: <code>['FFFFFF']</code>
+      </li>
+    </ul>
+  </li>
+  <li>
+    <code>fillRotate</code>
+    <ul>
+      <li>
+        type: <code>number</code>
+      </li>
+      <li>
+        default: <code>0</code>
+      </li>
+    </ul>
+  </li>
+  <li>
+    <code>fillOpacity</code>
+    <ul>
+      <li>
+        type: <code>number</code>
+      </li>
+      <li>
+        default: <code>1</code>
+      </li>
+    </ul>
+  </li>
+  <li>
+    <code>stroke</code>
+    <ul>
+      <li>
+        type: <code>hexString</code>
+      </li>
+      <li>
+        default: <code>'000000'</code>
+      </li>
+    </ul>
+  </li>
+  <li>
+    <code>strokeWidth</code>
+    <ul>
+      <li>
+        type: <code>number</code>
+      </li>
+      <li>
+        default: <code>5</code>
+      </li>
+    </ul>
+  </li>
+  <li>
+    <code>size</code>
+    <ul>
+      <li>
+        type: <code>string</code>
+      </li>
+      <li>
+        default: <code>'100%'</code>
+      </li>
+    </ul>
+  </li>
 </ol>
 <nav>
   <!-- soon! -->
