--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1>Icon Playground</h1>
-<small>v0.0.1</small>
+<a href="https://www.npmjs.com/package/@joster/icon">
+  v0.0.1
+</a>
 <h2>Features</h2>
 <ol>
   <li>scalable vector graphics 😎</li>
