--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -6,7 +6,7 @@
   viewBox="0 0 100 100"
 >
   <linearGradient
-    id="fill-gradient"
+    id="fill-gradient-{{id}}"
     attr.gradientTransform="rotate({{fillRotate}})"
   >
     <stop
@@ -17,7 +17,7 @@
   </linearGradient>
   <circle
     *ngIf="type === 'circle'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
     cx="50"
@@ -26,7 +26,7 @@
   />
   <circle
     *ngIf="type === 'dot'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
     cx="50"
@@ -35,14 +35,14 @@
   />
   <path
     *ngIf="type === 'ring'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
     attr.d="{{ringPath()}}"
   />
   <rect
     *ngIf="type === 'square'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
@@ -53,7 +53,7 @@
   />
   <rect
     *ngIf="type === 'squircle'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
@@ -65,7 +65,7 @@
   />
   <rect
     *ngIf="type === 'minus'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
     x="10"
@@ -75,21 +75,21 @@
   />
   <polygon
     *ngIf="type === 'check'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
     points="40,80 90,30 80,20 40,60 20,40 10,50"
   />
   <polygon
     *ngIf="type === 'times'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
     points="20,90 10,80 40,50 10,20 20,10 50,40 80,10 90,20 60,50 90,80 80,90 50,60"
   />
   <polygon
     *ngIf="type === 'plus'"
-    fill="url(#fill-gradient)"
+    attr.fill="url(#fill-gradient-{{id}})"
     attr.stroke="#{{stroke}}"
     attr.stroke-width="{{strokeWidth}}"
     points="40,90 60,90 60,60 90,60 90,40 60,40 60,10 40,10 40,40 10,40 10,60 40,60"
