code stands out

--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Icon Playground</h1>
 <a href="https://www.npmjs.com/package/@joster/icon">
-  v0.0.1
+  v0.0.3
 </a>
 <h2>Features</h2>
 <ol>
@@ -99,7 +99,9 @@
   </div>
   <form>
     <fieldset>
-      <legend>fill</legend>
+      <legend>
+        <code>fill</code>
+      </legend>
       <fc-button (clicked)="item.fill.push({ color: '000000'})">
         Add
       </fc-button>
