--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Icon Resource</h1>
-<a href="https://www.npmjs.com/package/@joster/icon">
-  v0.0.5
+<a href="https://github.com/joster-dev/icon/packages/327210">
+  v0.0.1
 </a>
 <h2>
   <code>{{iconText}}</code>
