--- a/projects/playground/src/styles.scss
+++ b/projects/playground/src/styles.scss
@@ -3,11 +3,7 @@ body {
   margin: auto;
   padding: 0 0.25em;
 
-  @media (min-width: 576px) {
-    max-width: 540px;
-  }
-
-  @media (min-width: 768px) {
+  @media screen {
     max-width: 720px;
   }
 }
