--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Icon Documentation</h1>
 <p>
   <a href="https://github.com/joster-dev/icon/packages/327210">
-    github v0.0.4
+    github v0.0.5
   </a>
 </p>
 <h2>About</h2>
@@ -150,9 +150,8 @@
     </ul>
   </li>
 </ul>
-<h2>Icon Examples</h2>
 <ng-container *ngFor="let item of typeItems">
-  <h3>⭐ {{item.type}}</h3>
+  <h2>⭐ {{item.type}} example</h2>
   <br />
   <div class="row">
     <div class="icon-container">
@@ -190,21 +189,25 @@
       <legend>
         ⚙️ fill
       </legend>
-      <fc-button (clicked)="item.fill.push({ color: '000000'})">
-        Add
-      </fc-button>
-      <div
-        *ngFor="let fill of item.fill; let idx = index"
-        class="fill-container"
-      >
-        <fc-color
-          [(ngModel)]="fill.color"
-          name="{{item.type}}-{{idx}}"
-          class="flex-1"
-        ></fc-color>
-        <fc-button (clicked)="item.fill.splice(idx, 1)">
-          Remove
-        </fc-button>
+      <div class="col-1-1">
+        <div class="fill-container">
+          <fc-button (clicked)="item.fill.push({ color: '000000'})">
+            Add
+          </fc-button>
+        </div>
+        <div
+          *ngFor="let fill of item.fill; let idx = index"
+          class="fill-container"
+        >
+          <fc-color
+            [(ngModel)]="fill.color"
+            name="{{item.type}}-{{idx}}"
+            class="flex-1"
+          ></fc-color>
+          <fc-button (clicked)="item.fill.splice(idx, 1)">
+            Remove
+          </fc-button>
+        </div>
       </div>
     </fieldset>
     <fieldset>
@@ -237,8 +240,7 @@
     </ul>
   </li>
 </ul>
-<h2>Icon Stack Example</h2>
-<h3>⭐ icon stack</h3>
+<h2>⭐ icon stack example</h2>
 <br />
 <div class="row">
   <div class="icon-container">
