more meta and doc verbiage

--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -13,7 +13,7 @@
         customizable scalable vector graphics
       </li>
       <li>
-        may be scaled up or down to any resolution with no aliasing
+        scaled up or down to any resolution with no aliasing
       </li>
     </ul>
   </li>
@@ -43,7 +43,7 @@
 <h2>Getting Started</h2>
 <ol>
   <li>
-    in your angular project run
+    in your <a href="https://angular.io/">angular</a> project run
     <ul>
       <li>
         <code>npm install @joster-dev/icon --save</code>
@@ -51,20 +51,25 @@
     </ul>
   </li>
   <li>
-    in the module that utilizes these controls add
-    <ul>
+    in the module that utilizes these controls
+    <ol>
       <li>
-        <code>{{"import { IconModule } from '@joster-dev/icon'"}}</code>
+        import the dependency
+        <ul>
+          <li>
+            <code>{{"import { IconModule } from '@joster-dev/icon'"}}</code>
+          </li>
+        </ul>
       </li>
-    </ul>
-  </li>
-  <li>
-    in the module update your imports
-    <ul>
       <li>
-        <code>imports: [..., IconModule]</code>
+        update your dependencies
+        <ul>
+          <li>
+            <code>imports: [..., IconModule]</code>
+          </li>
+        </ul>
       </li>
-    </ul>
+    </ol>
   </li>
 </ol>
 <h2>Icon Inputs</h2>
