--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -15,11 +15,21 @@
       attr.stop-color="#{{color}}"
     />
   </linearGradient>
+  <linearGradient
+    id="stroke-gradient-{{id}}"
+    attr.gradientTransform="rotate({{strokeRotate}})"
+  >
+    <stop
+      *ngFor="let color of stroke; let idx = index"
+      attr.offset="{{strokeGradientOffset(idx)}}%"
+      attr.stop-color="#{{color}}"
+    />
+  </linearGradient>
   <circle
     *ngIf="type === 'circle'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     attr.cx="{{centerX}}"
     attr.cy="{{centerY}}"
@@ -29,7 +39,7 @@
     *ngIf="type === 'dot'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     attr.cx="{{centerX}}"
     attr.cy="{{centerY}}"
@@ -39,7 +49,7 @@
     *ngIf="type === 'ring'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     d="M50,2.5C23.767,2.5,2.5,23.767,2.5,50S23.767,97.5,50,97.5S97.5,76.233,97.5,50S76.233,2.5,50,2.5z M50,80c-16.568,0-30-13.432-30-30c0-16.568,13.432-30,30-30s30,13.432,30,30C80,66.568,66.568,80,50,80z"
   />
@@ -47,7 +57,7 @@
     *ngIf="type === 'square'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     x="2.5"
     y="2.5"
@@ -58,7 +68,7 @@
     *ngIf="type === 'squircle'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     x="2.5"
     y="2.5"
@@ -70,7 +80,7 @@
     *ngIf="type === 'minus'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     x="2.5"
     y="37.5"
@@ -81,7 +91,7 @@
     *ngIf="type === 'check'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     points="96.465,27.488 82.322,13.347,37.257,58.367 17.675,38.785 3.535,52.928 37.259,86.652"
   />
@@ -89,7 +99,7 @@
     *ngIf="type === 'times'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     points="64.143,50 96.465,17.678 82.323,3.535,50,35.857 17.678,3.535 3.535,17.676 35.858,50 3.535,82.323 17.678,96.465 50.001,64.142 82.323,96.465 96.465,82.322"
   />
@@ -97,7 +107,7 @@
     *ngIf="type === 'plus'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     points="97.5,37.5 62.5,37.5 62.5,2.5 37.5,2.5 37.5,37.5 2.5,37.5 2.5,62.5 37.5,62.5 37.5,97.5 62.5,97.5 62.5,62.5 97.5,62.5"
   />
@@ -105,7 +115,7 @@
     *ngIf="type === 'row'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     points="96,50 66.5,20 66.5,37.5 33.5,37.5 33.5,20 4,50 33.5,80 33.5,62.5 66.5,62.5 66.5,80"
   />
@@ -113,7 +123,7 @@
     *ngIf="type === 'column'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     points="62.5,33.535 80,33.535 50,3.535 20,33.535 37.5,33.535 37.5,66.465 20,66.465 50,96.465 80,66.465 62.5,66.465"
   />
@@ -121,7 +131,7 @@
     *ngIf="type === 'flag'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     points="93,33.86 22.5,7.368 22.5,2.5 2.5,2.5 2.5,97.5 22.5,97.5 22.5,59.915"
   />
@@ -129,7 +139,7 @@
     *ngIf="type === 'gear'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     d="M96.35,39.625C95.178,34.369,93.14,29.44,90.385,25H80l-5-5V9.618C70.554,6.859,65.617,4.82,60.353,3.65L56.61,7.761L50,15.022l-6.61-7.261L39.647,3.65C34.382,4.82,29.447,6.859,25,9.618V20l-5,5H9.615C6.86,29.44,4.822,34.369,3.65,39.625l4.165,3.764L15.132,50l-7.316,6.61L3.65,60.375C4.822,65.631,6.86,70.56,9.615,75H20l5,5v10.382c4.441,2.755,9.371,4.793,14.628,5.964l3.761-4.162L50,84.867l6.61,7.316l3.761,4.162c5.258-1.171,10.188-3.209,14.629-5.964V80l5-5h10.385c2.755-4.44,4.793-9.369,5.965-14.625l-4.165-3.765L84.869,50l7.315-6.611L96.35,39.625z M50,72.5c-12.427,0-22.5-10.073-22.5-22.5c0-12.426,10.073-22.5,22.5-22.5S72.5,37.574,72.5,50C72.5,62.427,62.427,72.5,50,72.5z"
   />
@@ -137,7 +147,7 @@
     *ngIf="type === 'star'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     points="50,9.91 62.022,38.363 92.798,41.005
 69.453,61.23 76.45,91.316 50,75.364 23.55,91.315 30.547,61.23 7.203,41.005 37.978,38.363 "
@@ -148,7 +158,7 @@
     fill="#FFFFFF"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     cx="50"
     cy="27.5"
@@ -158,55 +168,35 @@
     *ngIf="type === 'user'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
     d="M86.6,52.5H71.646 C67.324,59.971,59.252,65,50,65s-17.324-5.029-21.646-12.5H14.4c-6.297,0-11.9,5.373-11.9,12v33h95v-33 C97.5,57.873,92.896,52.5,86.6,52.5z"
   />
   <!-- end user -->
-  <!-- start bomb -->
   <path
     *ngIf="type === 'bomb'"
     attr.fill="url(#fill-gradient-{{id}})"
     attr.fill-opacity="{{fillOpacity}}"
-    attr.stroke="#{{stroke}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
-    d="M71.965,18.429
-c-3.904-3.905-10.236-3.905-14.142,0.001l-1.519,1.518C52.002,18.365,47.354,17.5,42.5,17.5c-22.092,0-40,17.909-40,40
-c0,22.092,17.908,40,40,40s40-17.908,40-40c0-4.297-0.686-8.432-1.939-12.312l2.012-2.011c3.904-3.905,3.904-10.237,0-14.143
-L71.965,18.429z"
+    d="M93.83,34.453c4.807-4.806,4.904-12.501,0.218-17.188L82.734,5.952C78.048,1.266,70.353,1.363,65.546,6.17l-1.449,1.448C59.293,5.929,54.131,5,48.75,5C23.207,5,2.5,25.707,2.5,51.25S23.207,97.5,48.75,97.5C74.293,97.5,95,76.793,95,51.25c0-5.382-0.929-10.544-2.619-15.348L93.83,34.453z M40.238,67.109c-1.131,0.791-2.689,0.518-3.48-0.613C36.67,66.371,24.859,53.863,24.6,53.492c-1.584-2.264-1.034-5.381,1.229-6.965c2.262-1.584,5.379-1.033,6.963,1.229c0.25,0.357,8.063,15.871,8.063,15.871C41.645,64.758,41.369,66.316,40.238,67.109z M52.5,55.063c0,1.381-1.119,2.5-2.5,2.5s-2.5-1.119-2.5-2.5c0-0.15-2.5-17.172-2.5-17.625c0-2.762,2.238-5,5-5s5,2.238,5,5C55,37.873,52.5,55.063,52.5,55.063zM75.4,53.492c-0.25,0.357-12.157,13.004-12.157,13.004c-0.792,1.131-2.351,1.404-3.481,0.613c-1.132-0.793-1.406-2.352-0.614-3.482c0.087-0.123,7.802-15.5,8.062-15.871c1.584-2.262,4.701-2.813,6.963-1.229C76.435,48.111,76.984,51.23,75.4,53.492z"
+  />
+  <!-- start refresh -->
+  <path
+    *ngIf="type === 'refresh'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    d="M50,80c-9.186,0-17.391-4.141-22.893-10.643L37.5,58.965h-35v35l12.204-12.204C23.395,91.42,35.982,97.5,50,97.5c26.232,0,47.5-21.268,47.5-47.5H80C80,66.568,66.568,80,50,80z"
   />
   <path
-    *ngIf="type === 'bomb'"
-    stroke="#000000"
-    stroke-miterlimit="10"
-    d="M87,7.571C87,8.636,86.104,9.5,85,9.5l0,0c-1.104,0-2-0.863-2-1.929V2.429
-C83,1.364,83.896,0.5,85,0.5l0,0c1.104,0,2,0.863,2,1.929V7.571z"
+    *ngIf="type === 'refresh'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    d="M85.296,18.24C76.605,8.58,64.018,2.5,50,2.5C23.768,2.5,2.5,23.768,2.5,50H20c0-16.568,13.432-30,30-30c9.186,0,17.393,4.141,22.893,10.643L62.5,41.036h35v-35L85.296,18.24z"
   />
-  <path
-    *ngIf="type === 'bomb'"
-    stroke="#000000"
-    stroke-miterlimit="10"
-    d="M97.57,13c1.066,0,1.93,0.896,1.93,2l0,0c0,1.104-0.863,2-1.93,2h-5.143
-c-1.064,0-1.929-0.896-1.929-2l0,0c0-1.104,0.862-2,1.929-2H97.57z"
-  />
-  <path
-    *ngIf="type === 'bomb'"
-    stroke="#000000"
-    stroke-miterlimit="10"
-    d="M95.313,7.516c-0.754,0.753-1.998,0.73-2.777-0.051l0,0
-c-0.78-0.781-0.805-2.024-0.051-2.777l3.638-3.637c0.753-0.754,1.996-0.73,2.776,0.05l0,0c0.781,0.78,0.805,2.024,0.052,2.778
-L95.313,7.516z"
-  />
-  <line
-    *ngIf="type === 'bomb'"
-    fill="none"
-    stroke="#000000"
-    stroke-width="5"
-    stroke-miterlimit="10"
-    x1="85"
-    y1="15"
-    x2="75"
-    y2="25"
-  />
-  <!-- end bomb -->
+  <!-- end refresh -->
 </svg>
