--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -199,4 +199,28 @@
     d="M85.296,18.24C76.605,8.58,64.018,2.5,50,2.5C23.768,2.5,2.5,23.768,2.5,50H20c0-16.568,13.432-30,30-30c9.186,0,17.393,4.141,22.893,10.643L62.5,41.036h35v-35L85.296,18.24z"
   />
   <!-- end refresh -->
+  <polygon
+    *ngIf="type === 'ascend'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    points="50,3.841 20,38.842 80,38.842"
+  />
+  <polygon
+    *ngIf="type === 'descend'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    points="50,96.158 20,61.158 80,61.158"
+  />
+  <path
+    *ngIf="type === 'search'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    d="M96.465,87.627L70.56,61.721C74.924,55.591,77.5,48.099,77.5,40C77.5,19.29,60.711,2.5,40,2.5C19.29,2.5,2.5,19.29,2.5,40c0,20.711,16.79,37.5,37.5,37.5c8.098,0,15.591-2.575,21.72-6.94l25.906,25.905L96.465,87.627z M40,65c-13.807,0-25-11.192-25-25c0-13.807,11.193-25,25-25c13.808,0,25,11.193,25,25C65,53.808,53.808,65,40,65z"
+  />
 </svg>
