--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -326,3 +326,10 @@
   </fieldset>
 </form>
 <br />
+<icon-stack size="10em">
+  <icon type="ring"></icon>
+  <icon
+    type="crown"
+    size="8em"
+  ></icon>
+</icon-stack>
