--- a/projects/playground/src/app/app.component.scss
+++ b/projects/playground/src/app/app.component.scss
@@ -19,6 +19,7 @@
     display: grid;
     grid-auto-rows: minmax(0, 1fr);
     grid-auto-columns: minmax(0, 1fr);
+    z-index: -1;
 
     > .accent {
       background-color: lightgrey;
