--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -4,6 +4,9 @@
   version="1.1"
   xmlns="http://www.w3.org/2000/svg"
   viewBox="0 0 100 100"
+  [class.spin-x]="spin === 'x'"
+  [class.spin-y]="spin === 'y'"
+  [class.spin-z]="spin === 'z'"
 >
   <linearGradient
     id="fill-gradient-{{id}}"
