--- a/projects/icon/src/lib/icon.component.scss
+++ b/projects/icon/src/lib/icon.component.scss
@@ -3,5 +3,44 @@
 
   > svg {
     display: block;
+
+    &.spin-x {
+      animation: spinX 1s linear infinite;
+    }
+
+    &.spin-y {
+      animation: spinY 1s linear infinite;
+    }
+
+    &.spin-z {
+      animation: spinZ 1s linear infinite;
+    }
+  }
+}
+
+@keyframes spinX {
+  from {
+    transform: rotateX(0deg);
+  }
+  to {
+    transform: rotateX(360deg);
+  }
+}
+
+@keyframes spinY {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
+
+@keyframes spinZ {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
   }
 }
