--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -174,6 +174,7 @@
         [fillRotate]="item.fillRotate"
         [stroke]="mapColors(item.stroke)"
         [strokeRotate]="item.strokeRotate"
+        [spin]="item.spin"
       ></icon>
     </div>
   </div>
@@ -227,6 +228,7 @@
       <fc-choice
         [(ngModel)]="item.fillRotate"
         name="fillRotate"
+        required
         [items]="rotateItems"
       ></fc-choice>
     </fieldset>
@@ -265,7 +267,18 @@
       <fc-choice
         [(ngModel)]="item.strokeRotate"
         name="strokeRotate"
+        required
         [items]="rotateItems"
+      ></fc-choice>
+    </fieldset>
+    <fieldset>
+      <legend>
+        ⚙️ spin
+      </legend>
+      <fc-choice
+        [(ngModel)]="item.spin"
+        name="spin"
+        [items]="spinItems"
       ></fc-choice>
     </fieldset>
   </form>
